# tasky

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
_archive_go/: go.mod  go.sum  main.go
_archive_go/cmd/: done.go  finish.go  link.go  list.go
_archive_go/config/: config.go  frontmatter_keys.go
_archive_go/task/: finish.go
_archive_go/utils/: git.go  storage.go
app/: app.go  commands.go
cmd/: done.go  link.go  list.go  new.go  pomodoro.go  start.go
pomodoro/: pomodoro.go  pomodoro_anim.go
src/: config.rs  main.rs  pomodoro.rs  storage.rs  task.rs  utils.rs
src/cmd/: day_cmd.rs  done_cmd.rs  finish_cmd.rs  init.rs  link_cmd.rs  list_cmd.rs  mod.rs  new_cmd.rs  pomodoro_cmd.rs  pull_cmd.rs  report_cmd.rs  start_cmd.rs  stop_cmd.rs  week_cmd.rs
src/tui/: app.rs  gh.rs  mod.rs  ui.rs
task/: create.go  finish.go  start.go  task.go
utils/: audio.go  common.go
